# gpt-terminal-chat

./: README.md  main.py  pyproject.toml
facts-embeddings/: main.py  prompt.py  reduntant_filter_retriever.py
facts-embeddings/vector_store/: chroma.sqlite3
